[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/RedEnemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Swiatlo.png" type="Texture" id=3]
[ext_resource path="res://Sprites/EnemyDead-sheet.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 17.0

[sub_resource type="Animation" id=3]
resource_name = "Dead"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Dead:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Alive:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[node name="Enemy" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -3.2482e-13
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
rotation = -2.27374e-13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=[
"enemy",
]]
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 2 )

[node name="Alive" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
hframes = 3

[node name="BulletPointEnemy" type="Node2D" parent="."]
position = Vector2( 22, 1 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.134766, 0.134766 )
texture = ExtResource( 3 )
color = Color( 1, 0.690196, 0.690196, 1 )
mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 3 )
anims/EnemyShot = SubResource( 4 )

[node name="Dead" type="Sprite" parent="."]
visible = false
show_behind_parent = true
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
hframes = 4
frame = 1
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
